# saaru

./: .gitignore  Cargo.toml  README.md  index.html  raw_html.html
.github/workflows/: main.yml
docs/: .saaru.json
docs/src/: dataflow.md  gettingstarted.md  index.md  markdown.md  usage.md
docs/src/internals/: collections.md  deep_data_merge.md  frontmatter.md  json.md  tags.md
docs/src/posts/: index.md  post1.md  third_post.md
docs/templates/: base.jinja  footer.jinja  index.jinja  menubar.jinja  post.jinja  post_index.jinja  tags.jinja  tags_page.jinja
example_source/src/: index.md  index2.md  new_index.md
example_source/src/posts/: post1.md  third_post.md
example_source/templates/: base.jinja  hello.jinja  hello2.jinja  index.jinja  post.jinja  post_index.jinja  post_new.jinja  tags.jinja
src/: arguments.rs  frontmatter.rs  live_reload.rs  main.rs  orchestrator.rs  saaru.rs  test_template.jinja  utils.rs
src/saaru/: saaru.rs
