[package]
name = "custom-ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gray_matter = "0.2.4"
minijinja = {version = "0.27.0", features = ["source"]}
pulldown-cmark = {version = "0.9.2", features = ["default"]}
serde = { version = "1.0.150", features = ["derive"]}
walkdir = "2"
log = "0.4.17"
simple_logger = "4.0.0"
